7761 qamy orcid fix position of visibility selector in mobile version (#1317)
* Fix build works delete

* Fix mobile titles

--- a/src/app/cdk/panel/panel/panel.component.scss
+++ b/src/app/cdk/panel/panel/panel.component.scss
@@ -60,3 +60,14 @@ mat-checkbox.text-wrap {
     white-space: normal;
   }
 }
+.columns-8 :host,
+.columns-4 :host {
+  .header {
+    flex-wrap: wrap;
+    padding: 10px;
+    padding-bottom: 15px;
+  }
+  .buttons-container {
+    width: 100%;
+  }
+}
